Sept fonctionnalités, migrations Flyway et invisibilité des comptes suspendus
Gestion du compte, statuts de bibliothèque, suivi entre joueurs, réactions
« utile », listes personnalisées, filtres du classement et console
d'administration — avec la fondation qui les rendait possibles.

Schéma
- Flyway prend le schéma en charge (V1 à V9), ddl-auto passe à validate.
  Les bases en service sont marquées à la V1 sans la rejouer, une base vide
  reçoit toute la série.
- `game_rating` cesse d'être « une note » pour devenir une entrée de
  bibliothèque : note optionnelle, statut obligatoire. Toutes les agrégations
  du classement excluent désormais explicitement les lignes sans note.

Fonctionnalités
- Compte : mot de passe, adresse, et suppression par anonymisation — la ligne
  reste, vidée de ce qui désigne une personne, pour ne pas trouer le classement
  ni les fils de discussion.
- Statuts : à jouer, en cours, terminé.
- Suivi orienté et fil d'activité fusionnant notes et avis, dédoublonné quand
  un joueur a noté puis commenté le même jeu.
- Réactions « utile » et tri du fil d'avis par utilité.
- Listes publiques ou privées, à l'ordre décidé par leur auteur.
- Classement filtrable par genre, plateforme et année, avec cinq tris ; les
  valeurs des filtres viennent des jeux réellement notés.
- Console : tableau de bord, file de signalements conservant une copie du texte
  visé, suspension et gestion des rôles.

Sécurité
- Le rôle est relu en base à chaque requête plutôt que porté par le jeton :
  rétrograder ou suspendre prend effet immédiatement.
- Un compte suspendu disparaît du site — profil en 404, absent de la recherche,
  des abonnements, du fil, des listes publiques ; ses avis ne sont plus servis
  et les compteurs suivent. Ses notes restent au classement, anonymes, et la
  réactivation rend tout d'un coup.

Trente et un tests unitaires s'ajoutent, dont ceux qui figent la normalisation
des filtres, l'ordre des listes, la fusion du fil et l'anonymisation.

Co-Author